<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="d.pintoptech.liftnetwork.sponsor.ui.Home"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_likes"
        android:name="d.pintoptech.liftnetwork.sponsor.ui.LikeFragment"
        android:label="@string/title_likes"
        tools:layout="@layout/fragment_like" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="d.pintoptech.liftnetwork.sponsor.ui.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>