<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/i_am"
        android:textColor="@color/colorAccent"
        android:textSize="40sp"
        android:fontFamily="@font/poppins_light"
        android:layout_marginTop="15dp"
        android:layout_marginStart="40dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/unselected_btn"
            android:text="@string/a_sponsor"
            android:textColor="@color/colorAccent"
            android:fontFamily="@font/poppins_light"
            android:textSize="17sp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:id="@+id/a_sponsor"
            android:layout_marginBottom="15dp"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/unselected_btn"
            android:text="@string/a_beneficiary"
            android:textColor="@color/colorAccent"
            android:fontFamily="@font/poppins_light"
            android:textSize="17sp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:id="@+id/a_beneficiary"
            android:layout_marginBottom="15dp"
            />
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/full_button"
        android:text="@string/continueBtn"
        android:textColor="@color/colorPlain"
        android:fontFamily="@font/poppins_light"
        android:textSize="17sp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:id="@+id/proceed"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        />
</RelativeLayout>