<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AuthActivity"
    android:background="@drawable/background">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBlackTransparent">
        <TextView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_alignParentTop="true"
            android:textColor="@color/colorPlain"
            android:textAlignment="center"
            android:layout_marginTop="60dp"
            android:fontFamily="@font/poppins_bold"
            android:textSize="40sp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:paddingStart="40dp"
            android:paddingEnd="40dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/facebook_btn"
                android:layout_marginTop="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:id="@+id/loginFb">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/facebook_icon"
                    android:textColor="@color/colorPlain"
                    android:textSize="17sp"
                    android:fontFamily="@font/lineicons"
                    android:layout_centerVertical="true"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/facebook"
                    android:textColor="@color/colorPlain"
                    android:fontFamily="@font/poppins_light"
                    android:textSize="17sp"
                    android:layout_centerInParent="true"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/full_button"
                android:layout_marginTop="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:id="@+id/loginGoogle">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/google_icon"
                    android:textColor="@color/colorPlain"
                    android:textSize="17sp"
                    android:fontFamily="@font/lineicons"
                    android:layout_centerVertical="true"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/google"
                    android:textColor="@color/colorPlain"
                    android:fontFamily="@font/poppins_light"
                    android:textSize="17sp"
                    android:layout_centerInParent="true"
                    />
            </RelativeLayout>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/terms"
            android:textColor="@color/colorPlain"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_light"
            android:id="@+id/terms"
            android:textAlignment="center"
            android:layout_marginTop="15dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPlainTransparent"
            android:id="@+id/loader"
            android:visibility="gone">
            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"/>
        </RelativeLayout>
        <com.facebook.login.widget.LoginButton
            android:id="@+id/fbBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:visibility="gone"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>