<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".sponsor.ui.Home"
    android:background="@drawable/second_gradient_anm"
    android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="-1dp"
        android:paddingStart="12dp"
        android:paddingEnd="0dp"
        android:layout_alignParentTop="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingEnd="12dp"
            android:paddingStart="0dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/discover"
                android:layout_alignParentStart="true"
                android:textColor="@color/colorPlain"
                android:fontFamily="@font/poppins_light"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_centerVertical="true"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_icon"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:layout_alignParentEnd="true"
                android:fontFamily="@font/lineicons"
                android:background="@drawable/menu_bg"
                android:textSize="17sp"
                android:layout_centerVertical="true"
                android:id="@+id/search"/>
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="60dp"
        android:layout_marginTop="?attr/actionBarSize"
        android:id="@+id/content">
        <com.lorentzos.flingswipe.SwipeFlingAdapterView
            android:id="@+id/frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:rotation_degrees="15.5"
            app:max_visible="4"
            app:min_adapter_stack="6"
            android:layout_marginTop="15dp"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/loader"
        android:visibility="gone">
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/reloader"
        android:visibility="gone">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:id="@+id/reload">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reload_icon"
                android:fontFamily="@font/lineicons"
                android:layout_gravity="center"
                android:textColor="@color/colorPlainTransparent"
                android:textSize="55sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/reload"
                android:fontFamily="@font/poppins_light"
                android:textSize="18sp"
                android:textColor="@color/colorPlainTransparent"
                />
        </LinearLayout>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/empty"
        android:visibility="gone">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/warning_icon"
                android:fontFamily="@font/lineicons"
                android:layout_gravity="center"
                android:textColor="@color/colorPlainTransparent"
                android:textSize="55sp"/>
            <TextView
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/no_data"
                android:fontFamily="@font/poppins_light"
                android:textSize="18sp"
                android:textColor="@color/colorPlainTransparent"
                />
        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>