<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="beneficiary.ChatList"
    android:background="@color/colorPlain">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/main">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/border_bottom_view"
                    android:paddingBottom="20dp">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/messages"
                            android:textSize="17sp"
                            android:fontFamily="@font/poppins_bold"
                            android:textColor="@color/colorAccent"
                            android:paddingEnd="12dp"
                            android:paddingStart="12dp"
                            android:layout_centerVertical="true"/>
                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginEnd="12dp"
                        android:background="@drawable/searches"
                        android:paddingTop="7dp"
                        android:paddingStart="12dp"
                        android:paddingEnd="12dp"
                        android:paddingBottom="7dp">
                        <TextView
                            android:id="@+id/icon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:fontFamily="@font/lineicons"
                            android:text="@string/search_icon"
                            android:textSize="17sp"
                            android:textColor="@color/colorBody"
                            android:layout_centerVertical="true"/>
                        <EditText
                            android:layout_toEndOf="@+id/icon"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/colorSimplest"
                            android:hint="@string/search"
                            android:textColor="@color/colorAccent"
                            android:textColorHint="@color/colorBody"
                            android:fontFamily="@font/poppins_regular"
                            android:textSize="17sp"
                            android:id="@+id/search"
                            android:layout_marginBottom="10dp"
                            android:inputType="text"
                            android:layout_centerVertical="true"
                            android:paddingStart="20dp"
                            android:paddingEnd="0dp"/>
                    </RelativeLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="?attr/actionBarSize">
                    <androidx.recyclerview.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:id="@+id/recyclerview"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"/>
                </LinearLayout>
            </LinearLayout>

        </RelativeLayout>
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/loader"
        android:visibility="gone"
        android:layout_centerInParent="true">
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/reloader"
        android:visibility="gone"
        android:layout_centerInParent="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:id="@+id/reload">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reload_icon"
                android:fontFamily="@font/lineicons"
                android:layout_gravity="center"
                android:textColor="@color/colorAccent"
                android:textSize="55sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/reload"
                android:fontFamily="@font/poppins_light"
                android:textSize="18sp"
                android:textColor="@color/colorAccent"
                />
        </LinearLayout>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/empty"
        android:visibility="gone"
        android:layout_centerInParent="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/warning_icon"
                android:fontFamily="@font/lineicons"
                android:layout_gravity="center"
                android:textColor="@color/colorAccent"
                android:textSize="55sp"/>
            <TextView
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/no_data2"
                android:fontFamily="@font/poppins_light"
                android:textSize="18sp"
                android:textColor="@color/colorAccent"
                />
        </LinearLayout>

    </RelativeLayout>
</RelativeLayout>